--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url= jdbc:postgresql://localhost:5432/studentdb
+spring.datasource.url= jdbc:postgresql://localhost:5432/smdb
 spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -6,6 +6,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # hibernate properties
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.ddl-auto = update
 logging.level.org.springframework.web=DEBUG
 spring.jpa.show-sql=true
